<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LayZate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_flight_list">Flight List</string>

    <string name="title_activity_flight_status_change">Lay Zate</string>

    <string-array name="query_time_period">
        <item>Please Select Time Period</item>
        <item>12:00 AM - 3:00 AM</item>
        <item>3:00 AM - 6:00 AM</item>
        <item>6:00 AM - 9:00 AM</item>
        <item>9:00 AM - 12:00 PM</item>
        <item>12:00 PM - 3:00 PM</item>
        <item>3:00 PM - 6:00 PM</item>
        <item>6:00 PM - 9:00 PM</item>
        <item>9:00 PM - 12:00 AM</item>
    </string-array>

    <string-array name="airport_names">
        <item>Please Select Airport</item>
        <item>12:00 AM - 3:00 AM</item>
        <item>3:00 AM - 6:00 AM</item>
        <item>6:00 AM - 9:00 AM</item>
        <item>9:00 AM - 12:00 PM</item>
        <item>12:00 PM - 3:00 PM</item>
        <item>3:00 PM - 6:00 PM</item>
        <item>6:00 PM - 9:00 PM</item>
        <item>9:00 PM - 12:00 AM</item>
    </string-array>

    <string name="am">AM</string>
    <string name="pm">PM</string>

    <string name="progress_title">Please Wait</string>
    <string name="progress_message">Fetching data....</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_flightdata">No Flight Information</string>

    <string name="status_change_flight_time">Flight Time</string>
    <string name="status_change_airport_name">Airport Name</string>


    <string name="status_change_rdo_departure">Departure</string>
    <string name="status_change_rdo_arrival">Arrival</string>



    <string name="dialog_filght_info">Flight info</string>
    <string name="dialog_btn_gotit">Got it</string>
    <string name="dialog_flightname">Flight Name</string>
    <string name="dialog_carriername">Carrier Name</string>
    <string name="dialog_Destination">Destination</string>
    <string name="dialog_time">Time</string>
    <string name="dialog_status">Status</string>

    <string name="status_ontime">On Time</string>
    <string name="status_Late">Late</string>
    <string name="status_VeryLate">Very Late</string>
    <string name="status_Excessive">Excessive</string>

    <string name="about_dialogtext">Lay Zate \n
        V 1.0 \n\n
        <b>Developer :</b>\t Win Htaik Aung \n\n

        <i><b>Credits</b></i>\n
        For the development and inspiration\n
        I took some references from android bootCamp App\n
        and also fork some Experts git repo Bro Thura Hlaing \n
        and Bro Ye Lin Aung repo to Localization and design inspiration\n\n

        :-)\n\n

        <b>OpenSource Libraries</b>\n\n

        <i><b>Butter Knife</b></i>\n https://github.com/JakeWharton/butterknife \n\n
        <i><b>Volley</b></i>\n https://android.googlesource.com/platform/frameworks/volley/ \n\n
        <i><b>Jsoup</b></i>\nhttp://jsoup.org/packages/jsoup-1.8.1.jar \n\n
        <i><b>Floating Action Button</b></i>\nhttps://github.com/futuresimple/android-floating-action-button\n\n
        <i><b>Material Dialog for Lower API</b></i>\nhttps://github.com/drakeet/MaterialDialog








    </string>



</resources>
