<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_marginBottom="50dp"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/dialog_flightname"
            />
        <TextView
            android:id="@+id/tvFlightname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="flightname"
            />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/dialog_carriername"
            />
        <TextView
            android:id="@+id/tvCarriername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="Carrier Name"
            />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/dialog_Destination"
            />
        <TextView
            android:id="@+id/tvOrigin_Destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="origin Destination"
            />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/dialog_time"
            />

        <TextView
            android:id="@+id/tv_Arrival_Departure_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="arrival_departure_time"
            />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/dialog_status"
            />
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="status"
            />

    </LinearLayout>


</LinearLayout>